--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ html {
   }
 }
 .favicon img {
-  background-color: rgb(152, 177, 152);
+  background-color: rgb(152, 177, 152)
 }
 
 html,
@@ -81,7 +81,7 @@ body {
  */
 a,
 a:visited {
-  color: #b9b3b3;
+  color:#b9b3b3;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -89,6 +89,7 @@ a:visited {
   transition: all 0.3s ease-in-out;
   font-size: larger;
   font-weight: bold;
+  
 }
 a:hover,
 a:focus,
@@ -1184,113 +1185,82 @@ input::-moz-focus-inner {
  *
  * ------------------------------------------------------------------- 
  */
-
-.header {
+ 
+ .header{
   position: relative;
-  top: 0;
-  width: 100%;
+  top:0;
+  width:100%;
   height: 60px;
   background-color: #1c2a38;
-}
-li {
+ }
+ li{
   list-style: none;
-}
 
-a {
-  color: #f1f1f1;
+ }
+
+ a{
+  color:#f1f1f1;
   text-decoration: none;
-}
+ }
 
-.container {
-  width: 1500px;
-  margin: auto;
-}
-.subcontainer {
-  width: 85%;
-  margin: auto;
-}
-.navbar {
-  width: 100%;
+ .container{
+  width:1500px;
+  margin:auto;
+ }
+ .subcontainer{
+  width:85%;
+  margin:auto;
+ }
+ .navbar{
+  width:100%;
   min-height: 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-top: 15px;
-}
+ }
 
-.navbar img {
-  width: 40px;
+ .navbar img{
+  width:40px;
   padding-bottom: 17px;
-}
-.menu {
+  
+ }
+ .nav-menu{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 20px;
-  margin-left: 70px;
-}
+  gap:20px;
+  margin-left:70px;
+ }
 
-.hamburger {
+.hamburger{
   display: none;
   cursor: pointer;
   padding-bottom: 19px;
 }
 
-.bar {
+.bar{
   display: block;
   width: 25px;
-  height: 3px;
+  height:3px;
   padding-bottom: 3px;
   margin: 5px 0;
   transition: all 0.3s ease;
   background-color: rgb(192, 162, 103);
 }
-
+ 
 /**MEDIA QUERY**/
-@media (max-width: 1500px) {
-  .container {
-    width: 100%;
-  }
+@media (max-width:1500px){
+.container{
+  width:100%;
+
 }
-@media (max-width: 768px) {
-  .hamburger {
-    display: block;
-  }
-
-  .hamburger.active.bar :nth-child(2) {
-    opacity: 0;
-  }
-
-  .hamburger.active.bar :nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
-  }
-
-  .hamburger.active.bar :nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg);
-  }
-
-  .menu {
-    position: fixed;
-    left: -100%;
-    top: 70px;
-    gap: 5px;
-    flex-direction: row;
-    width: 50%;
-    margin-left: 40px;
-    text-align: center;
-    transition: 0.3s;
-  }
-  .navItem:hover {
-    color: rgb(192, 162, 103);
-  }
-  .navItem {
-    margin: 16px 0;
-  }
-
-  .menu.active {
-    left: 0;
-  }
 }
+
+    
+
+   
+
 
 /** 
  * ===================================================================
@@ -1328,7 +1298,7 @@ a {
   -ms-transform: translateY(-2.1rem);
   transform: translateY(-2.1rem);
 }
-.row {
+.row{
   padding-bottom: 90px;
 }
 .intro-content h1 {
@@ -1665,9 +1635,11 @@ a {
   transition: all 0.5s ease-in-out;
 }
 .item-wrap img {
+  
   border-radius: 50px 20px;
 }
-.w-100 {
+.w-100{
+  
   border-radius: 50px 20px;
 }
 #portfolio .folio-item-table {
@@ -2059,7 +2031,7 @@ a {
   padding: 0 3rem;
   margin-top: 4.8rem;
   width: 100%;
-  background: rgb(192, 162, 103);
+  background:rgb(192, 162, 103);
   color: #ffffff;
 }
 #contact button.submitform:hover {
