--- a/css/main.css
+++ b/css/main.css
@@ -1188,138 +1188,211 @@ input::-moz-focus-inner {
  *
  * ------------------------------------------------------------------- 
  */
- 
- .header{
-  
-  top:0;
-  width:100%;
-  height: 60px;
-  background-color: #1c2a38;
- }
- li{
-  list-style: none;
-
- }
-
- a{
-  color:#f1f1f1;
-  text-decoration: none;
-  
- }
-
- .container{
-  width:1500px;
-  margin:auto;
- }
- .subcontainer{
-  width:85%;
-  margin:auto;
- }
- .navbar{
-  width:100%;
-  min-height: 70px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 15px;
-  word-spacing: 20px;
- }
-
- .navbar img{
-  width:40px;
-  padding-bottom: 17px;
-  
- }
- .nav-menu {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  
- 
- }
-
-.hamburger{
-  display: none;
-  cursor: pointer;
-  padding-bottom: 19px;
+ header {
+	position: fixed;
+	width: 100%;
+	min-height: 66px;
+	z-index: 600;
+}
+header .row {
+	position: relative;
+	min-height: 66px;
+}
+header .top-bar {
+	display: block;
+	background: rgb(26, 44, 59);
+	min-width: 140px;
+	min-height: 66px;
+	position: fixed;
+	left: 90px;
+	top: 0;
+}
+header .logo {
+	float: left;
+	margin-left: 20px;
+	margin-right: 30px;
+	margin-top: 5px;
+	position: relative;
+}
+header .logo a {
+	display: block;
+	margin: 0;
+	padding: 0;
+	border: none;
+	font: 0/0 a;
+	text-shadow: none;
+	color: transparent;
+	width: 65px;
+	height: 50px;
+	background: url("../images/OT.png") no-repeat center;
+	background-size: 65px 50px;
 }
 
-.bar{
-  display: block;
-  width: 25px;
-  height:3px;
-  padding-bottom:  3px;
-  margin: 5px 0;
-  transition: all 0.3s ease;
-  background-color: rgb(192, 162, 103);
+/**
+ * menu toggle - (_layout.css)
+ * ------------------------------------------------------------------- 
+ */
+.menu-toggle {
+	float: left;
+	width: 40px;
+	height: 40px;
+	margin-left: 20px;
+	margin-top: 13px;
+	display: block;
+	position: relative;
+}
+.menu-toggle span {
+	display: block;
+	background-color:rgb(192, 162, 103);
+	width: 24px;
+	height: 3px;
+	margin-top: -1.5px;
+	font: 0/0 a;
+	text-shadow: none;
+	color: transparent;
+	position: absolute;
+	right: 8px;
+	top: 50%;
+	bottom: auto;
+	left: auto;
+	-moz-transition: background 0.2s ease-in-out;
+	-o-transition: background 0.2s ease-in-out;
+	-webkit-transition: background 0.2s ease-in-out;
+	-ms-transition: background 0.2s ease-in-out;
+	transition: background 0.2s ease-in-out;
+}
+.menu-toggle span::before, .menu-toggle span::after {
+	content: '';
+	width: 100%;
+	height: 100%;
+	background-color: inherit;
+	position: absolute;
+	left: 0;
+	-moz-transition-duration: 0.2s, 0.2s;
+	-o-transition-duration: 0.2s, 0.2s;
+	-webkit-transition-duration: 0.2s, 0.2s;
+	-ms-transition-duration: 0.2s, 0.2s;
+	transition-duration: 0.2s, 0.2s;
+	-moz-transition-delay: 0.2s, 0s;
+	-o-transition-delay: 0.2s, 0s;
+	-webkit-transition-delay: 0.2s, 0s;
+	-ms-transition-delay: 0.2s, 0s;
+	transition-delay: 0.2s, 0s;
+}
+.menu-toggle span::before {
+	top: -8px;
+	-moz-transition-property: top, transform;
+	-o-transition-property: top, transform;
+	-webkit-transition-property: top, transform;
+	-ms-transition-property: top, transform;
+	transition-property: top, transform;
+}
+.menu-toggle span::after {
+	bottom: -8px;
+	-moz-transition-property: bottom, transform;
+	-o-transition-property: bottom, transform;
+	-webkit-transition-property: bottom, transform;
+	-ms-transition-property: bottom, transform;
+	transition-property: bottom, transform;
 }
 
-.nav-link{
-  transition:0.7s ease;
+/* is clicked */
+.menu-toggle.is-clicked span {
+	background-color: rgba(255, 0, 119, 0);
+}
+.menu-toggle.is-clicked span::before, .menu-toggle.is-clicked span::after {
+	background-color: #9b7203;
+	-moz-transition-delay: 0s, 0.2s;
+	-o-transition-delay: 0s, 0.2s;
+	-webkit-transition-delay: 0s, 0.2s;
+	-ms-transition-delay: 0s, 0.2s;
+	transition-delay: 0s, 0.2s;
+}
+.menu-toggle.is-clicked span::before {
+	top: 0;
+	-webkit-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	transform: rotate(45deg);
+}
+.menu-toggle.is-clicked span::after {
+	bottom: 0;
+	-webkit-transform: rotate(-45deg);
+	-ms-transform: rotate(-45deg);
+	transform: rotate(-45deg);
 }
 
-.nav-link:hover{
-  color:rgb(192, 162, 103);
+/* navigation panel */
+#main-nav-wrap {
+	display: block;
+	width: 100%;
+	font-family: "poppins-medium", sans-serif;
+	font-size: 1.5rem;
+	position: absolute;
+	top: 100%;
+	left: 0;
 }
- 
-/**MEDIA QUERY**/
-  @media (max-width:1500px){
 
-.container{
-  width:100%;
+/* dropdown nav */
+.main-navigation {
+	background: rgb(26, 44, 59);
+	padding: 24px 30px 42px;
+	margin: 0;
+	width: 100%;
+	height: auto;
+	clear: both;
+	display: none;
 }
+.main-navigation > li {
+	display: block;
+	height: auto;
+	text-align: left;
+	padding: 0;
+}
+.main-navigation li a {
+	display: block;
+	color: #FFFFFF;
+	width: auto;
+	padding: 15px 0;
+	line-height: 16px;
+	border: none;
+}
+.main-navigation li a:hover {
+	color: #9b7203;
+	padding-left: 1rem;
+}
+.main-navigation li.current > a {
+	background: none;
+	color: #9b7203;
 }
 
-@media (max-width:768px){
-
-.hamburger{
-  display:block;
-  position: relative;
+/**
+ * responsive:
+ * header styles
+ * --------------------------------------------------------------- 
+ */
+@media only screen and (max-width:1024px) {
+	header .top-bar {
+		left: 60px;
+	}
 }
-.hamburger.active.bar:nth-child(2){
-opacity: 0;
-
- }
-.hamburger.active.bar:nth-child(1){
-transform: translateY(8px) rotate(45deg );
- }
-.hamburger.active.bar:nth-child(3){
-transform: translateY(-8px) rotate(-45deg );
- }
- .nav-menu{
-  position: absolute;
-  left:-100%;
- }
-
-  
-
+@media only screen and (max-width:768px) {
+	header .top-bar {
+		left: 50px;
+	}
+}
+@media only screen and (max-width:600px) {
+	header .top-bar {
+		left: 25px;
+	}
+}
+@media only screen and (max-width:400px) {
+	header .top-bar {
+		left: 25px;
+	}
+}
 
 
- .nav-menu{
-  position:fixed;
-  left:-100%;
-  gap:0;
-  top:80px;
-  flex-direction:row;
-  width: 90%;
-  text-align: center;
-  transition: 0.3s;
-  z-index: 3;
- }
-
-
- .nav-menu:hover{
-  color:rgb(192, 162, 103);
- }
- .nav-item{
-  margin:16px 0; 
- }
-
-  .nav-menu.active{
-    left:0;
-  }
-    }
-/** 
+/**
  * ===================================================================
  * 10. intro - (_layout.scss) 
  *
