--- a/css/main.css
+++ b/css/main.css
@@ -1201,25 +1201,26 @@ header .row {
 header .top-bar {
 	display: block;
 	background: rgb(26, 44, 59);
-	min-width: 140px;
-	min-height: 66px;
+	min-width: 100px;
+	min-height: 56px;
 	position: fixed;
-	left: 10px;
+	left: 20px;
 	top: 0;
 }
 header .logo {
 	float: left;
-	margin-left: 40px;
+	margin-left: 20px;
 	margin-right: 30px;
-	margin-top: 15px;
+	margin-top: 5px;
 	position: relative;
 }
 header .logo a {
 	display: block;
-	margin: 0;
+	margin-top: 1px;
+	padding: 0;
 	width: 45px;
 	height: 50px;
-	background-size: 65px 50px;
+	
 }
 
 /**
@@ -1228,19 +1229,18 @@ header .logo a {
  */
 .menu-toggle {
 	float: left;
-	width: 45px;
-	height: 40px;
-	margin-left: 20px;
-	margin-top: 13px;
+	width: 65px;
+	height: 50px;
+	margin:  9px , 10px;
 	display: block;
 	position: relative;
 }
 .menu-toggle span {
 	display: block;
 	background-color:rgb(192, 162, 103);
-	width: 24px;
+	width: 35px;
 	height: 3px;
-	margin-top: -1.5px;
+	margin-top: 1.5px;
 	font: 0/0 a;
 	text-shadow: none;
 	color: transparent;
@@ -1332,7 +1332,6 @@ header .logo a {
 	padding: 24px 30px 42px;
 	margin: 0;
 	width: 100%;
-	height: auto;
 	clear: both;
 	display: none;
 }
@@ -1346,13 +1345,15 @@ header .logo a {
 	display: block;
 	color: #FFFFFF;
 	width: auto;
-	padding: 15px 0;
+  height: 15px;
+	padding: 20px 0;
 	line-height: 16px;
 	border: none;
 }
 .main-navigation li a:hover {
 	color:rgb(192, 162, 103);
 	padding-left: 1rem;
+  
 }
 .main-navigation li.current > a {
 	background: none;
@@ -1427,9 +1428,9 @@ header .logo a {
 .intro-content h1 {
   color: #ffffff;
   font-family: "poppins-medium", sans-serif;
-  font-size: 7.4rem;
+  font-size: 8.4rem;
   line-height: 1.071;
-  max-width: 800px;
+  max-width: 840px;
   margin-top: 0;
   margin-bottom: 0.5rem;
   margin-left: auto;
